# chip-8_emu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-tidy.yml  lint.yml  super-lint.yml
include/: Chip8.hpp  Timer.hpp  Window.hpp
src/: CMakeLists.txt  Chip8.cpp  Chip8.hpp  Timer.cpp  chip8.cpp  chip8.hpp  hello.cpp  main.cpp  window.cpp  window.hpp
